[package]
name = "rust_hyper_post"
version = "0.1.0"
authors = ["Fabio Mencoboni <fabio.mencoboni@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.100", features = ["derive"]}
serde_json = "1.0.64" 
hyper = { version = "0.14.9", features = ["full"] }
tokio = { version = "1.5.0", features = ["full"] }
